--- a/src/book-choice.html
+++ b/src/book-choice.html
@@ -14,21 +14,19 @@
   }
 
   input[type=radio]{
-    /*height: 0;
+    height: 0;
     width: 0;
-    visibility: hidden;*/
+    visibility: hidden;
     position: relative;
     z-index: 88;
     top: 50px;
-  }
-
-  .radio-group {
   }
 
   label {
     cursor: pointer;
     position: absolute;
     z-index: 1;
+    overflow: hidden;
     top: 0;
     bottom: 0;
     margin: 0;
@@ -37,8 +35,7 @@
     width: 50%;
     color: #888;
     border: 1px solid #ddd;
-    border-radius: 3px;
-    /*background: #efefef;*/
+    border-radius: 2px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -49,11 +46,9 @@
     left: calc(50% - 18px);
     height: 36px;
     width: 36px;
-    /*color: #efefef;*/
     overflow: hidden;
     background: white;
     border-radius: 36px;
-    /*box-shadow: 0 0 5px -1px var(--color-primary-0);*/
     transform: rotateZ(45deg);
     transition: transform 0.35s ease-in-out;
   }
@@ -69,16 +64,16 @@
     content: '';
     position: absolute;
     z-index: -1;
-    bottom: 0;
+    top: -10%;
     width: 0;
-    height: 100%;
+    height: 120%;
     background: lightsalmon;
+    border-radius: 36px;
     transition: width 0.35s ease-in-out;
   }
 
   input#right:checked ~ label[for="right"],
   input#left:checked ~ label[for="left"] {
-    /*background: var(--color-primary-0);*/
     color: white;
     font-weight: bold;
   }
@@ -94,12 +89,12 @@
   input#left:checked ~ label[for="left"]:after,
   input#right:checked ~ label[for="right"]:after {
     background: var(--color-primary-0);
-    width: 100%;
+    width: 105%;
   }
 
   </style>
 
-  <div class="radio-group">
+  <form action="">
     <input type="radio" name="choice" id="left" value="offer" />
     <input type="radio" name="choice" id="clear" value="none" checked />
     <input type="radio" name="choice" id="right" value="demand" />
@@ -107,34 +102,13 @@
     <label for="left">offer</label>
     <label for="right">demand</label>
     <label for="clear"><iron-icon icon="icons:clear"></iron-icon></label>
-  </div>
-
-
-  <!-- <input type="checkbox" id="switch" />
-  <div class="toggle-group">
-    <label for="switch" class="toggle-off">[[labelOff]]</label>
-    <label for="switch" class="toggle-on"><iron-icon icon="icons:check"></iron-icon>[[labelOn]]</label>
-    <span class="toggle-handle"></span>
-  </div> -->
-  <!-- <label for="switch" style="z-index: 88;">[[labelOn]]</label> -->
+  </form>
 
   </template>
 
   <script>
     class BookChoice extends Polymer.Element {
       static get is() { return 'book-choice'; }
-
-      static get properties() { return {
-          labelOn: {
-            type: String,
-            value: 'On'
-          },
-          labelOff: {
-            type: String,
-            value: 'Off'
-          }
-        };
-      }
     }
     customElements.define(BookChoice.is, BookChoice);
   </script>
