--- a/src/books-data.html
+++ b/src/books-data.html
@@ -19,7 +19,8 @@
           "id":3,
           "title":"Rumo and His Miraculous Adventures",
           "subtitle":"a Novel in Two Books",
-          "isbn":"9780329641092"
+          "isbn":"9780329641092",
+          "image":"http://via.placeholder.com/130x180/efefef/ccc?text=no%20image"
         }, {
           "id":4,
           "title":"Brenzio",
@@ -30,6 +31,7 @@
           "id":5,
           "title":"RUMO A UMA NOVA EPISTEMOLOGIA DA PSIQUIATRIA",
           "isbn":"9788571373754",
+          "image":"http://via.placeholder.com/130x180/efefef/ccc?text=no%20image"
         }, {
           "id":6,
           "title":"Die 13 1/2 Leben des Käpt'n BlaubärRoman",
